--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -3,174 +3,184 @@
     {{ message }}
   </ng-container>
 </swal>
-<form
-  action="#"
-  (ngSubmit)="register()"
-  id="form-register"
-  class="mt-4"
-  role="form"
-  #prodForm="ngForm"
->
-  <legend>Create an account</legend>
 
-  <div class="form-group">
-    <label for="nombre">Name:</label>
-    <input
-      type="text"
-      class="form-control"
-      id="name"
-      name="nameUser"
-      placeholder="Name"
-      [(ngModel)]="newUser.name"
-      required
-      #nombreModel="ngModel"
-      [ngClass]="{
-        'is-valid': nombreModel.touched && nombreModel.valid,
-        'is-invalid': nombreModel.touched && nombreModel.invalid
-      }"
-    />
-    <div
-      class="invalid-feedback"
-      *ngIf="nombreModel.errors && nombreModel.errors.required"
-    >
-      Name is required
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="correo">Email:</label>
-    <input
-      type="email"
-      class="form-control"
-      id="email"
-      name="email"
-      placeholder="Email"
-      [(ngModel)]="newUser.email"
-      required
-      #emailModel="ngModel"
-      [ngClass]="{
-        'is-valid': emailModel.touched && emailModel.valid,
-        'is-invalid': emailModel.touched && emailModel.invalid
-      }"
-    />
-
-    <div
-      class="invalid-feedback"
-      *ngIf="emailModel.errors && emailModel.errors.required"
-    >
-      Email is required
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="correo">Repeat Email:</label>
-    <input
-      type="email"
-      class="form-control"
-      id="email2"
-      name="email2"
-      placeholder="Email"
-      [(ngModel)]="repeatemail"
-      #emailRepeatModel="ngModel"
-      required
-      [ngClass]="{
-        'is-valid': emailRepeatModel.touched && emailRepeatModel.valid,
-        'is-invalid': emailRepeatModel.touched && emailRepeatModel.invalid
-      }"
-    />
-    <div
-      class="invalid-feedback"
-      *ngIf="emailRepeatModel.errors && emailRepeatModel.errors.required"
-    >
-      Email confirmation is required
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="password">Password:</label>
-    <input
-      type="password"
-      class="form-control"
-      id="password"
-      name="password"
-      placeholder="Password"
-      required
-      [(ngModel)]="newUser.password"
-      minlength="4"
-      #passwordModel="ngModel"
-      [ngClass]="{
-        'is-valid': passwordModel.touched && passwordModel.valid,
-        'is-invalid': passwordModel.touched && passwordModel.invalid
-      }"
-    />
-    <div
-      class="invalid-feedback"
-      *ngIf="passwordModel.errors && passwordModel.errors.required"
-    >
-      Password is required
-    </div>
-    <div
-      class="invalid-feedback"
-      *ngIf="passwordModel.errors && passwordModel.errors.minlength"
-    >
-      Add at least
-      {{
-        passwordModel.errors.minlength.requiredLength -
-          passwordModel.errors.minlength.actualLength
-      }}
-      characters
-    </div>
-  </div>
-  <div class="form-row">
-    <div class="form-group col">
-      <label for="lat">Latitude:</label>
-      <input
-        type="text"
-        class="form-control"
-        id="lat"
-        name="lat"
-        [(ngModel)]="newUser.lat"
-        placeholder="Geolocating..."
-        readonly
-      />
-    </div>
-    <div class="form-group col">
-      <label for="lng">Longitude:</label>
-      <input
-        type="text"
-        class="form-control"
-        id="lng"
-        name="lng"
-        [(ngModel)]="newUser.lng"
-        placeholder="Geolocating..."
-        readonly
-      />
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="image">Avatar image</label>
-    <input
-      type="file"
-      class="form-control"
-      id="avatar"
-      name="avatar"
-      required
-      #fileImage
-      (change)="changeImage(fileImage)"
-      [(ngModel)]="photoFile"
-      #photoModel="ngModel"
-      [ngClass]="{
-        'is-valid': photoModel.touched && photoModel.valid,
-        'is-invalid': photoModel.touched && photoModel.invalid
-      }"
-    />
-
-    <div class="invalid-feedback">Photo is required</div>
-  </div>
-
-
-  <img [src]="newUser.photo" alt="" id="imgPreview" class="img-thumbnail" />
-  <a class="btn btn-secondary" [routerLink]="['/auth/login']" role="button"
-    >Go back</a
+<div class="container">
+  <form
+    action="#"
+    (ngSubmit)="register()"
+    id="form-register"
+    class="mt-4"
+    spMatchEmail
+    role="form"
+    #prodForm="ngForm"
   >
-  <button type="submit" class="btn btn-primary" [disabled]="prodForm.invalid">
-    Create account
-  </button>
-</form>
+    <legend>Create an account</legend>
+
+    <div class="form-group">
+      <label for="nombre">Name:</label>
+      <input
+        type="text"
+        class="form-control"
+        id="name"
+        name="nameUser"
+        placeholder="Name"
+        [(ngModel)]="newUser.name"
+        required
+        #nombreModel="ngModel"
+        [ngClass]="{
+          'is-valid': nombreModel.touched && nombreModel.valid,
+          'is-invalid': nombreModel.touched && nombreModel.invalid
+        }"
+      />
+      <div
+        class="invalid-feedback"
+        *ngIf="nombreModel.errors && nombreModel.errors.required"
+      >
+        Name is required
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="correo">Email:</label>
+      <input
+        type="email"
+        class="form-control"
+        id="email"
+        name="email"
+        placeholder="Email"
+        [(ngModel)]="newUser.email"
+        required
+        #emailModel="ngModel"
+        [ngClass]="{
+          'is-valid': emailModel.touched && emailModel.valid,
+          'is-invalid': emailModel.touched && emailModel.invalid
+        }"
+      />
+
+      <div
+        class="invalid-feedback"
+        *ngIf="emailModel.errors && emailModel.errors.required"
+      >
+        Email is required
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="correo">Repeat Email:</label>
+      <input
+        type="email"
+        class="form-control"
+        id="email2"
+        name="email2"
+        placeholder="Email"
+        [(ngModel)]="repeatemail"
+        #emailRepeatModel="ngModel"
+        required
+        [ngClass]="{
+          'is-valid': emailRepeatModel.touched && emailRepeatModel.valid,
+          'is-invalid': emailRepeatModel.touched && emailRepeatModel.invalid
+        }"
+      />
+      <div
+        class="invalid-feedback"
+        *ngIf="emailRepeatModel.errors && emailRepeatModel.errors.required"
+      >
+        Email confirmation is required
+      </div>
+
+      <div
+        class="invalid-feedback"
+        *ngIf="prodForm.errors && prodForm.errors.matchValue"
+      >
+        Emails doesn't match
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="password">Password:</label>
+      <input
+        type="password"
+        class="form-control"
+        id="password"
+        name="password"
+        placeholder="Password"
+        required
+        [(ngModel)]="newUser.password"
+        minlength="4"
+        #passwordModel="ngModel"
+        [ngClass]="{
+          'is-valid': passwordModel.touched && passwordModel.valid,
+          'is-invalid': passwordModel.touched && passwordModel.invalid
+        }"
+      />
+      <div
+        class="invalid-feedback"
+        *ngIf="passwordModel.errors && passwordModel.errors.required"
+      >
+        Password is required
+      </div>
+      <div
+        class="invalid-feedback"
+        *ngIf="passwordModel.errors && passwordModel.errors.minlength"
+      >
+        Add at least
+        {{
+          passwordModel.errors.minlength.requiredLength -
+            passwordModel.errors.minlength.actualLength
+        }}
+        characters
+      </div>
+    </div>
+    <div class="form-row">
+      <div class="form-group col">
+        <label for="lat">Latitude:</label>
+        <input
+          type="text"
+          class="form-control"
+          id="lat"
+          name="lat"
+          [(ngModel)]="newUser.lat"
+          placeholder="Geolocating..."
+          readonly
+        />
+      </div>
+      <div class="form-group col">
+        <label for="lng">Longitude:</label>
+        <input
+          type="text"
+          class="form-control"
+          id="lng"
+          name="lng"
+          [(ngModel)]="newUser.lng"
+          placeholder="Geolocating..."
+          readonly
+        />
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="image">Avatar image</label>
+      <input
+        type="file"
+        class="form-control"
+        id="avatar"
+        name="avatar"
+        required
+        #fileImage
+        (change)="changeImage(fileImage)"
+        [(ngModel)]="photoFile"
+        #photoModel="ngModel"
+        [ngClass]="{
+          'is-valid': photoModel.touched && photoModel.valid,
+          'is-invalid': photoModel.touched && photoModel.invalid
+        }"
+      />
+
+      <div class="invalid-feedback">Photo is required</div>
+    </div>
+
+    <img [src]="newUser.photo" alt="" id="imgPreview" class="img-thumbnail" />
+    <a class="btn btn-secondary" [routerLink]="['/auth/login']" role="button"
+      >Go back</a
+    >
+    <button type="submit" class="btn btn-primary" [disabled]="prodForm.invalid">
+      Create account
+    </button>
+  </form>
+</div>
