--- a/src/app/products/product-form/product-form.component.html
+++ b/src/app/products/product-form/product-form.component.html
@@ -3,150 +3,151 @@
     Are you sure you want to leave this page?. Changes will be lost...
   </ng-container>
 </swal>
-
-<form class="mt-4" (ngSubmit)="operationProduct()" #prodForm="ngForm">
-  <div class="form-group">
-    <label for="title">Title</label>
-    <input
-      type="text"
-      class="form-control"
-      name="title"
-      id="title"
-      [(ngModel)]="newProduct.title"
-      placeholder="Product you are selling"
-      required
-      minlength="5"
-      #titleModel="ngModel"
-      [ngClass]="{
-        'is-valid': titleModel.touched && titleModel.valid,
-        'is-invalid': titleModel.touched && titleModel.invalid
-      }"
-    />
-    <div
-      class="invalid-feedback"
-      *ngIf="titleModel.errors && titleModel.errors.required"
-    >
-      Title is required
-    </div>
-    <div
-      class="invalid-feedback"
-      *ngIf="titleModel.errors && titleModel.errors.minlength"
-    >
-      Add at least
-      {{
-        titleModel.errors.minlength.requiredLength -
-          titleModel.errors.minlength.actualLength
-      }}
-      characters
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="description">Description</label>
-    <textarea
-      class="form-control"
-      id="description"
-      name="description"
-      [(ngModel)]="newProduct.description"
-      rows="3"
-      placeholder="Write something..."
-      required
-      #descModel="ngModel"
-      [ngClass]="{
-        'is-valid': descModel.touched && descModel.valid,
-        'is-invalid': descModel.touched && descModel.invalid
-      }"
-    ></textarea>
-    <div class="invalid-feedback">Description is required</div>
-  </div>
-  <div class="form-group">
-    <label for="price">Price</label>
-    <input
-      type="number"
-      step="0.01"
-      class="form-control"
-      name="price"
-      id="price"
-      [(ngModel)]="newProduct.price"
-      placeholder="Price"
-      required
-      spPositiveValue
-      #priceModel="ngModel"
-      [ngClass]="{
-        'is-valid': priceModel.touched && priceModel.valid,
-        'is-invalid': priceModel.touched && priceModel.invalid
-      }"
-    />
-    <div
-      class="invalid-feedback"
-      *ngIf="priceModel.errors && priceModel.errors.required"
-    >
-      Price is required
-    </div>
-    <div
-      class="invalid-feedback"
-      *ngIf="priceModel.errors && priceModel.errors.positiveValue"
-    >
-      Price must be greater than 0
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="category">Category</label>
-    <select
-      id="category"
-      name="category"
-      [(ngModel)]="newProduct.category"
-      class="form-control"
-      required
-      spPositiveValue
-      #catModel="ngModel"
-      [ngClass]="{
-        'is-valid': catModel.touched && catModel.valid,
-        'is-invalid': catModel.touched && catModel.invalid
-      }"
-    >
-      <option value="0" selected>Choose a category...</option>
-      <option *ngFor="let category of categories" [value]="category.id">
-        {{ category.name }}
-      </option>
-    </select>
-    <div class="invalid-feedback">You must choose a category</div>
-  </div>
-  <div class="form-group" *ngIf="!productRecive">
-    <label for="image">Main photo</label>
-    <input
-      type="file"
-      class="form-control"
-      id="image"
-      name="image"
-      #fileImage
-      (change)="changeImage(fileImage)"
-      [(ngModel)]="photoFile"
-      required
-      #photoModel="ngModel"
-      [ngClass]="{
-        'is-valid': photoModel.touched && photoModel.valid,
-        'is-invalid': photoModel.touched && photoModel.invalid
-      }"
-    />
-    <div class="invalid-feedback">Photo is required</div>
-    <img [src]="newProduct.mainPhoto" class="img-thumbnail" />
-  </div>
-
-  <div class="row">
-    <div class="col-auto">
-      <a
-        class="btn btn-success btn-lg mr-2"
-        *ngIf="productRecive"
-        [routerLink]="['/products', productRecive.id, 'photos']"
-        >Photos</a
+<div class="container">
+  <form class="mt-4" (ngSubmit)="operationProduct()" #prodForm="ngForm">
+    <div class="form-group">
+      <label for="title">Title</label>
+      <input
+        type="text"
+        class="form-control"
+        name="title"
+        id="title"
+        [(ngModel)]="newProduct.title"
+        placeholder="Product you are selling"
+        required
+        minlength="5"
+        #titleModel="ngModel"
+        [ngClass]="{
+          'is-valid': titleModel.touched && titleModel.valid,
+          'is-invalid': titleModel.touched && titleModel.invalid
+        }"
+      />
+      <div
+        class="invalid-feedback"
+        *ngIf="titleModel.errors && titleModel.errors.required"
       >
-      <button
-        type="submit"
-        class="btn btn-primary btn-lg"
-        [disabled]="prodForm.invalid"
+        Title is required
+      </div>
+      <div
+        class="invalid-feedback"
+        *ngIf="titleModel.errors && titleModel.errors.minlength"
       >
-        Save
-      </button>
+        Add at least
+        {{
+          titleModel.errors.minlength.requiredLength -
+            titleModel.errors.minlength.actualLength
+        }}
+        characters
+      </div>
     </div>
-  </div>
-</form>
+    <div class="form-group">
+      <label for="description">Description</label>
+      <textarea
+        class="form-control"
+        id="description"
+        name="description"
+        [(ngModel)]="newProduct.description"
+        rows="3"
+        placeholder="Write something..."
+        required
+        #descModel="ngModel"
+        [ngClass]="{
+          'is-valid': descModel.touched && descModel.valid,
+          'is-invalid': descModel.touched && descModel.invalid
+        }"
+      ></textarea>
+      <div class="invalid-feedback">Description is required</div>
+    </div>
+    <div class="form-group">
+      <label for="price">Price</label>
+      <input
+        type="number"
+        step="0.01"
+        class="form-control"
+        name="price"
+        id="price"
+        [(ngModel)]="newProduct.price"
+        placeholder="Price"
+        required
+        spPositiveValue
+        #priceModel="ngModel"
+        [ngClass]="{
+          'is-valid': priceModel.touched && priceModel.valid,
+          'is-invalid': priceModel.touched && priceModel.invalid
+        }"
+      />
+      <div
+        class="invalid-feedback"
+        *ngIf="priceModel.errors && priceModel.errors.required"
+      >
+        Price is required
+      </div>
+      <div
+        class="invalid-feedback"
+        *ngIf="priceModel.errors && priceModel.errors.positiveValue"
+      >
+        Price must be greater than 0
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="category">Category</label>
+      <select
+        id="category"
+        name="category"
+        [(ngModel)]="newProduct.category"
+        class="form-control"
+        required
+        spPositiveValue
+        #catModel="ngModel"
+        [ngClass]="{
+          'is-valid': catModel.touched && catModel.valid,
+          'is-invalid': catModel.touched && catModel.invalid
+        }"
+      >
+        <option value="0" selected>Choose a category...</option>
+        <option *ngFor="let category of categories" [value]="category.id">
+          {{ category.name }}
+        </option>
+      </select>
+      <div class="invalid-feedback">You must choose a category</div>
+    </div>
+    <div class="form-group" *ngIf="!productRecive">
+      <label for="image">Main photo</label>
+      <input
+        type="file"
+        class="form-control"
+        id="image"
+        name="image"
+        #fileImage
+        (change)="changeImage(fileImage)"
+        [(ngModel)]="photoFile"
+        required
+        #photoModel="ngModel"
+        [ngClass]="{
+          'is-valid': photoModel.touched && photoModel.valid,
+          'is-invalid': photoModel.touched && photoModel.invalid
+        }"
+      />
+      <div class="invalid-feedback">Photo is required</div>
+      <img [src]="newProduct.mainPhoto" class="img-thumbnail" />
+    </div>
+
+    <div class="row">
+      <div class="col-auto">
+        <a
+          class="btn btn-success btn-lg mr-2"
+          *ngIf="productRecive"
+          [routerLink]="['/products', productRecive.id, 'photos']"
+          >Photos</a
+        >
+        <button
+          type="submit"
+          class="btn btn-primary btn-lg"
+          [disabled]="prodForm.invalid"
+        >
+          Save
+        </button>
+      </div>
+    </div>
+  </form>
+</div>
