intento hacer el validador de email

--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -69,7 +69,7 @@
         type="email"
         class="form-control"
         id="email2"
-        name="email2"
+        name="emailconfirm"
         placeholder="Email"
         [(ngModel)]="repeatemail"
         #emailRepeatModel="ngModel"
